# AquaScope-Agent

./: .env.example  .gitignore  CLAUDE.md  README.md  api_app.py  app.py  check_soak_test.cmd  demo_multimodal_api.py  generate_report.py  mrag_app.py  mrag_cli.py  pyproject.toml  raganything_cli.py  requirements.txt  run_app.py  run_soak_test_6h.cmd  start_chat_assistant.cmd  stop_chat_assistant.cmd  stop_soak_test.cmd  教学版-从RAG构建到LangGraph与MCP真实调用.md  重要文件与教学流程手册.md
aquabio_mrag_long_text_database/data/: species_list.json
aquabio_mrag_long_text_database/docs/: README.md  database_design.md  embedding_vector_design.md
aquabio_mrag_long_text_database/scripts/: build_chroma_index.py  crawl_wikipedia_worms_extend.py  query_demo.py
configs/: agent_config.json  model_config.json  pdf_sources.json  vector_db_config.json
data/: species_images.json
data/index/: pdf_chunks.jsonl
data/knowledge/: dataset_cards.jsonl  species_cards.jsonl
data/mrag/: memory_smoke_turn1.json
data/samples/: attribution.jsonl
data/vector_db/: manifest.json  records.jsonl  vectorizer.joblib  vectors.npz
docs/: AquaBio-AgentRAG技术文档-完整调用流程.md  LangGraph多轮会话与追问解析.md  PDF图片实体绑定与向量检索实现.md  SA海洋无脊椎动物图鉴PDF逐步处理详解.md  architecture.md  datasets.md  open_source_comparison.md  下一步-LangGraph场景路由与MCP工具调用设计.md  产品化界面与Agent工具流程.md  会话记录与执行轨迹存储说明.md  南非海洋无脊椎动物PDF逐步处理流程.md  参考项目对比与改进记录.md  启动命令与模块调用手册.md  学生手册-AquaBio-AgentRAG项目组织与调用链.md  完整流程与向量库.md  当前版本运行与调用流程.md  本地PDF图片库与持久化检索说明.md  本地前后端聊天助手运行说明.md  项目从PDF建库到图文问答逐步教学.md  项目全流程技术架构与实现审计.md  验收与稳定性测试记录.md
scripts/: 01_crawl_wikipedia_worms.py  02_crawl_commons_images.py  02b_fill_inaturalist_images.py  03_build_multimodal_documents.py  04_download_parse_pdfs.py  05_build_chroma_bge.py  download_mini_dataset.py  soak_test.py  soak_test_status.py  start_chat_assistant.ps1  start_soak_test.ps1  stop_chat_assistant.ps1  stop_soak_test.ps1  verify_mcp_integration.py  verify_mcp_live.py
src/aquabio/: __init__.py  _patch_starlette.py  agent.py  cli.py  config.py  detector.py  gemini.py  image_tools.py  openrouter.py  pdf_ingest.py  retriever.py  semantic_retriever.py  vector_store.py
src/aquabio_agent_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/aquabio_mrag/: __init__.py  config.py  conversation.py  data_pipeline.py  evidence.py  io_utils.py  mcp_client.py  mcp_server.py  models.py  pdf_pipeline.py  react_agent.py  retrieval.py  retrieval_agent.py  vector_db.py  workflow.py
src/aquabio_raganything/: __init__.py  audit.py  book_native.py  config.py  content_filter.py  (+8 more)
tests/: test_book_native_and_agents.py  test_conversation_memory.py  test_core.py  test_mrag_strict.py  test_network_images.py  test_raganything.py  test_web_api.py
(+88 files in other folders)
