[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aquabio-agent-rag"
version = "0.2.0"
requires-python = ">=3.10"
description = "Local multimodal RAG workbench for marine invertebrate identification, PDF knowledge graphs, and agentic research"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AquaBio Team"},
]
keywords = [
    "rag",
    "langgraph",
    "mcp",
    "multimodal",
    "marine-biology",
    "chromadb",
    "bge-m3",
    "streamlit",
    "fastapi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # PDF Processing
    "PyMuPDF>=1.24",
    # Image Processing
    "numpy>=1.26",
    "opencv-python>=4.9",
    "Pillow>=10.0",
    # Scientific Computing
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    # HTTP & Networking
    "requests>=2.31",
    "httpx>=0.27,<1",
    # Embeddings & Vector DB
    "sentence-transformers>=3.4,<6",
    "chromadb>=1.0,<2",
    # Agent Framework
    "langgraph>=1.0,<2",
    "langgraph-checkpoint-sqlite>=3.0,<4",
    "mcp>=1.20,<2",
    "pydantic>=2.10,<3",
    # Web Server
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "python-multipart>=0.0.20,<1",
    "streamlit>=1.55,<1.59",
    "starlette>=0.40,<0.42",
]

[project.optional-dependencies]
# RAG-Anything subsystem (separate venv: .venv-raganything)
raganything = [
    "lightrag-hku>=1.0",
    "mineru[core]>=0.4",
    "networkx>=3.0",
]

# Development & testing
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

# Full install (all optional deps)
full = [
    "aquabio-agent-rag[raganything,dev]",
]

[project.scripts]
aquabio-cli = "aquabio.cli:main"
aquabio-mrag-cli = "aquabio_mrag.cli:main"
aquabio-raganything-cli = "aquabio_raganything.cli:main"

[project.urls]
Documentation = "https://github.com/aquabio/agent-rag"
Repository = "https://github.com/aquabio/agent-rag"
Issues = "https://github.com/aquabio/agent-rag/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["aquabio", "aquabio.*", "aquabio_mrag", "aquabio_mrag.*", "aquabio_raganything", "aquabio_raganything.*", "aquabio_web", "aquabio_web.*"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__", "*.pyc"]
